--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-node": "0.0.1-security",
     "express": "^4.17.1",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.3",
@@ -28,9 +29,11 @@
     "redux": "^4.0.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.6",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
