--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "To-Watch list for movie and tv fanatics ",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "nodemon --exec babel-node server/server.js",
     "build": "webpack",
     "dev": "node server/server.js & webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,16 +25,19 @@
     "express": "^4.17.1",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.3",
+    "node": "^12.11.1",
     "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
+    "@babel/node": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
-    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.6",
+    "nodemon": "^1.19.3",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
