--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "axios": "^0.19.0",
     "babel-node": "0.0.1-security",
     "express": "^4.17.1",
+    "express-async-await": "^1.1.0",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.3",
     "node": "^12.11.1",
+    "node-fetch": "^2.6.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "redux": "^4.0.4"
@@ -37,7 +39,11 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.19.3",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
