--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-node": "0.0.1-security",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-async-await": "^1.1.0",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.3",
     "node": "^12.11.1",
     "node-fetch": "^2.6.0",
+    "pg": "^7.12.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "redux": "^4.0.4"
